2013-06-03  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_spin_lock, chx_spin_unlock): Rename.
	(chx_cpu_sched_lock, chx_cpu_sched_unlock): New.

	* chopstx.c (chx_exit): Use R8.

2013-05-29  Niibe Yutaka  <gniibe@fsij.org>

	* entry.c (entry): Initialize data section.

	* chopstx.c (svc): Implement race avoidance between
	chx_handle_intr.
	(chx_handle_intr): Increment ->ready.  Put to ready queue
	only when it's not running.
	(chx_sched): Add an argument for race avoidance.
	(chopstx_intr_wait): Fix race condition.
	(chopstx_cond_broadcast): Fix initial value.
	(chopstx_join): Check RET.
	(chx_init): Initialize q_exit and q_join.
	(chopstx_release_irq, chopstx_release_irq_thread): Enable IRQ on
	release (as system reset default).

	* board/board-olimex-stm32-h103.h (NEUG_ADC_SETTING2_*): Add.

	* chopstx.c (chx_mutex_unlock, chopstx_exit): New.
	(chopstx_mutex_unlock): Use chx_mutex_unlock.
	(chopstx_cond_wait): Fix race condition.

2013-05-28  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_intr_wait): Rename from chopstx_wait_intr.
	(chopstx_usec_wait): Rename from chosptx_usleep.
	(chopstx_cancel, chopstx_testcancel): New.
	(idle): Moved from entry.c and use WFI if USE_WFI_FOR_IDLE.

2013-05-27  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_fatal, chopstx_exit, chopstx_join): New.
	(struct chx_thread): Independent member of state.  Use bit fields.
	(chx_timer_expired, chx_handle_intr): Check priority before
	calling chx_request_preemption.
	(chx_disable_intr): Clear pending interrupt too.
	(chopstx_claim_irq): Rename from chopstx_intr_register.
	(chopstx_release_irq): New.
	(chopstx_join): Promote priority of thread to be joined.

2013-05-24  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_request_preemption): Rename from chx_preempt.

	* entry.c: "sys.h" is only for to new sys 2.0, keeping
	compatibility to 1.0, it is if-def out now.

2013-05-22  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_enable_intr, chx_disable_intr): Implement.